force-app/main/default/objects/AGromObject__c/AGromObject__c.object-meta.xml
<CustomObject>
    <label>AGromObject</label>
    <nameField>
        <label>AGromObhect Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AGromObjectss1</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>