force-app/main/default/objects/AGromObject__c/fields/AGromObject__c.field-meta.xml
<CustomField>
    <fullName>AGromObject__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AGromObject</label>
    <referenceTo>AGromObject__c</referenceTo>
    <relationshipLabel>AGromObjectss1123</relationshipLabel>
    <relationshipName>AGromObjectss1</relationshipName>
    <type>Lookup</type>
</CustomField>