force-app/main/default/objects/AGromObject__c/fields/asdfasdf__c.field-meta.xml
<CustomField>
    <fullName>asdfasdf__c</fullName>
    <description>alksdjflksdf</description>
    <inlineHelpText>hello</inlineHelpText>
    <label>asdfasdf</label>
    <type>Date</type>
</CustomField>