force-app/main/default/objects/AGromObject__c/fields/Data_Preview_Id2__c.field-meta.xml
<CustomField>
    <fullName>Data_Preview_Id2__c</fullName>
    <label>Data Preview Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>