force-app/main/default/objects/AGromObject__c/fields/hello__c.field-meta.xml
<CustomField>
    <fullName>hello__c</fullName>
    <label>hello</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>hello2</fullName>
            </value>
            <value>
                <fullName>hello3</fullName>
            </value>
            <value>
                <fullName>hello1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>