force-app/main/default/objects/AGromObject__c/fields/TestForCC__c.field-meta.xml
<CustomField>
    <fullName>TestForCC__c</fullName>
    <description>sdf3</description>
    <label>TestForCC</label>
    <referenceTo>TestForCC__c</referenceTo>
    <relationshipLabel>AGromObjects</relationshipLabel>
    <relationshipName>AGromObjects</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>